# grpc-bazel-sample

./: .gitignore  BUILD.bazel  WORKSPACE
src/main/java/com/google/demo/client/: UserDashboardClient.java
src/main/java/com/google/demo/protos/: user.proto
src/main/java/com/google/demo/server/: UserDashboard.java  UserDashboardImpl.java
